--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -240,3 +240,10 @@
     pointer-events: none;
   }
 }
+.hero {
+  background-size: cover;
+}
+img.top_header_img {
+  width: 100%;
+  padding: 2rem 0;
+}
